<resources>
    <string name="app_name">IrRemote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="power">Power</string>
    <string name="tv">TV</string>
    <string name="fan">Fan</string>
    <string name="ac">AC</string>
    <string name="add_new_brand">+ Add New Brand</string>
    <string name="receiver">Receiver</string>
    <string name="add_new_device">+ Add New Device</string>
    <string name="clear_device_list">Clear Device List</string>
    <string name="device">Device</string>
    <string name="model">Model</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num0">0</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="action_settings">Settings</string>
    <string name="please_enter_your_feedback_in_here">Please enter your feedback in here</string>
    <string name="projector">Projector</string>
</resources>
